[project]
name = "swarmclient"
version = "0.1a"
description = "蜂群克隆计划客户端"
authors = [
    {name = "kyv001",email = "kyvyang@foxmail.com"}
]
license = {text = "GPL-3.0"}
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "pyside6 (>=6.9.0,<7.0.0)",
    "pyside6-stubs (>=6.7.3.0,<7.0.0.0)",
    "sounddevice (>=0.5.2,<0.6.0)",
    "qasync (>=0.27.1,<0.28.0)",
    "numpy (>=2.2.6,<3.0.0)",
    "librosa (>=0.11.0,<0.12.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pip"
url = "http://mirrors.aliyun.com/pypi/simple"
priority = "primary"
